localization/v2.6.x/site/fr/integrations/integrations_overview.md
---
id: integrations_overview.md
summary: >-
  Cette page fournit une liste de tutoriels vous permettant d'interagir avec
  Milvus et des outils tiers.
title: Vue d'ensemble des intégrations
---
<h1 id="Integrations-Overview" class="common-anchor-header">Vue d'ensemble des intégrations<button data-href="#Integrations-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>Cette page fournit une liste de tutoriels vous permettant d'interagir avec Milvus et des outils tiers.</p>
<table>
<thead>
<tr><th>Tutoriel</th><th>Cas d'utilisation</th><th>Partenaires ou piles</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/fr/integrate_with_llamaindex.md">RAG avec Milvus et LlamaIndex</a></td><td>RAG</td><td>Milvus, LLamaIndex</td></tr>
<tr><td><a href="/docs/fr/integrate_with_langchain.md">RAG avec Milvus et LangChain</a></td><td>RAG</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/fr/milvus_hybrid_search_retriever.md">Milvus Hybrid Search Retriever dans LangChain</a></td><td>Recherche hybride</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/fr/basic_usage_langchain.md">Utiliser Milvus comme magasin de vecteurs dans LangChain</a></td><td>Recherche sémantique</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/fr/full_text_search_with_langchain.md">Utiliser la recherche plein texte avec LangChain et Milvus</a></td><td>Recherche plein texte</td><td>Milvus, LangChain</td></tr>
<tr><td><a href="/docs/fr/integrate_with_haystack.md">RAG avec Milvus et Haystack</a></td><td>RAG</td><td>Milvus, Haystack</td></tr>
<tr><td><a href="/docs/fr/llamaindex_milvus_async.md">RAG avec Milvus et LlamaIndex Async API</a></td><td>Ochestration</td><td>Milvus, LlamaIndex</td></tr>
<tr><td><a href="/docs/fr/milvus_rag_with_vllm.md">Construire RAG avec Milvus, vLLM, et Llama 3.1</a></td><td>RAG</td><td>Milvus, vLLM, LlamaIndex</td></tr>
<tr><td><a href="/docs/fr/llamaindex_milvus_full_text_search.md">Utilisation de la recherche plein texte avec LlamaIndex et Milvus</a></td><td>Recherche plein texte</td><td>Milvus, LlamaIndex</td></tr>
<tr><td><a href="/docs/fr/dify_with_milvus.md">Déploiement de Dify avec Milvus</a></td><td>Ochestration</td><td>Milvus, Dify</td></tr>
<tr><td><a href="/docs/fr/rag_with_langflow.md">Construire un système RAG en utilisant Langflow avec Milvus</a></td><td>Ochestration</td><td>Milvus, Langflow</td></tr>
<tr><td><a href="/docs/fr/use_milvus_in_private_gpt.md">Utiliser Milvus dans PrivateGPT</a></td><td>Ochestration</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/use_milvus_in_docsgpt.md">Utiliser Milvus dans DocsGPT</a></td><td>Ochestration</td><td>DocsGPT, Milvus</td></tr>
<tr><td><a href="/docs/fr/use_milvus_with_sambanova.md">Utiliser Milvus avec SambaNova</a></td><td>Orchestration</td><td>Milvus, SambaNova</td></tr>
<tr><td><a href="/docs/fr/milvus_rag_with_dynamiq.md">Démarrer avec Dynamiq et Milvus</a></td><td>Orchestration</td><td>Milvus, Dynamiq</td></tr>
<tr><td><a href="/docs/fr/llama_stack_with_milvus.md">Construire RAG avec Llama Stack avec Milvus</a></td><td>Orchestration</td><td>Milvus, Llama Stack</td></tr>
<tr><td><a href="/docs/fr/integrate_with_memgpt.md">Agent Chatbot avec Milvus et MemGPT</a></td><td>Agent</td><td>Milvus, MemGPT</td></tr>
<tr><td><a href="/docs/fr/llama_agents_metadata.md">Systèmes multi-agents avec Mistral AI, Milvus et Llama-agents</a></td><td>Agent</td><td>Milvus, Mistral AI, LlamaIndex</td></tr>
<tr><td><a href="/docs/fr/quickstart_mem0_with_milvus.md">Premiers pas avec Mem0 et Milvus</a></td><td>Agents</td><td>Mem0, Milvus</td></tr>
<tr><td><a href="/docs/fr/integrate_with_agno.md">Intégrer Milvus à Agno</a></td><td>Agents</td><td>Milvus, Agno</td></tr>
<tr><td><a href="/docs/fr/milvus_and_mcp.md">MCP + Milvus : connecter l'IA aux bases de données vectorielles</a></td><td>Agents</td><td>Milvus, MCP</td></tr>
<tr><td><a href="/docs/fr/openai_agents_milvus.md">Intégration de Milvus avec les agents OpenAI : Un guide étape par étape</a></td><td>Agents</td><td>Milvus, OpenAI</td></tr>
<tr><td><a href="/docs/fr/integrate_with_ragas.md">Évaluation RAG avec Ragas et Milvus</a></td><td>Évaluation</td><td>Milvus, Ragas</td></tr>
<tr><td><a href="/docs/fr/evaluation_with_deepeval.md">Évaluation avec DeepEval</a></td><td>Évaluation et observabilité</td><td>Milvus, DeepEval</td></tr>
<tr><td><a href="/docs/fr/evaluation_with_phoenix.md">Évaluation avec Arize Pheonix</a></td><td>Évaluation et observabilité</td><td>Milvus, Arize Pheonix</td></tr>
<tr><td><a href="/docs/fr/integrate_with_langfuse.md">Milvus dans Langfuse</a></td><td>Observabilité</td><td>Milvus, Langfuse</td></tr>
<tr><td><a href="/docs/fr/integrate_with_openai.md">Recherche sémantique avec Milvus et OpenAI</a></td><td>Recherche sémantique</td><td>Milvus, OpenAI</td></tr>
<tr><td><a href="/docs/fr/integrate_with_cohere.md">Réponse aux questions avec Milvus et Cohere</a></td><td>Recherche sémantique</td><td>Milvus, Cohere</td></tr>
<tr><td><a href="/docs/fr/integrate_with_hugging-face.md">Réponse aux questions avec Milvus et HuggingFace</a></td><td>Réponse aux questions</td><td>Milvus, HuggingFace</td></tr>
<tr><td><a href="/docs/fr/integrate_with_pytorch.md">Recherche d'images avec Milvus et Pytorch</a></td><td>Recherche sémantique</td><td>Milvus, Pytorch</td></tr>
<tr><td><a href="/docs/fr/integrate_with_sentencetransformers.md">Recherche de films avec Milvus et SentenceTransfromers</a></td><td>Recherche sémantique</td><td>Milvus, SentenceTransformers</td></tr>
<tr><td><a href="/docs/fr/integrate_with_voxel51.md">Recherche de vision avec Milvus et FiftyOne</a></td><td>Recherche sémantique</td><td>Milvus, FiftyOne</td></tr>
<tr><td><a href="/docs/fr/integrate_with_voyageai.md">Recherche sémantique avec Milvus et VoyageAI</a></td><td>Recherche sémantique</td><td>Milvus, VoyageAI</td></tr>
<tr><td><a href="/docs/fr/integrate_with_bentoml.md">RAG avec Milvus et BentoML</a></td><td>RAG</td><td>Milvus, BentoML</td></tr>
<tr><td><a href="/docs/fr/integrate_with_dspy.md">RAG avec Milvus et DSPy</a></td><td>RAG</td><td>Milvus, DSPy</td></tr>
<tr><td><a href="/docs/fr/integrate_with_jina.md">Recherche sémantique avec Milvus et Jina</a></td><td>Recherche sémantique</td><td>Milvus, Jina</td></tr>
<tr><td><a href="/docs/fr/integrate_with_snowpark.md">Milvus sur Snowpark Container Services</a></td><td>Connexion de données</td><td>Milvus, Snowpark</td></tr>
<tr><td><a href="/docs/fr/integrate_with_whyhow.md">Recherche basée sur des règles avec Milvus et WhyHow</a></td><td>Réponse aux questions</td><td>Milvus, WhyHow</td></tr>
<tr><td><a href="/docs/fr/integrate_with_fastgpt.md">Comment déployer FastGPT avec Milvus</a></td><td>RAG</td><td>Milvus, FastGPT</td></tr>
<tr><td><a href="/docs/fr/integrate_with_vanna.md">Ecrire SQL avec Vanna et Milvus</a></td><td>RAG</td><td>Milvus, Vanna</td></tr>
<tr><td><a href="/docs/fr/integrate_with_camel.md">RAG avec Milvus et Camel</a></td><td>RAG</td><td>Milvus, Camel</td></tr>
<tr><td><a href="/docs/fr/integrate_with_airbyte.md">Airbyte &amp; Milvus : Infrastructure de mouvement de données open-source</a></td><td>Connexion des données</td><td>Milvus, Airbyte</td></tr>
<tr><td><a href="/docs/fr/video_search_with_twelvelabs_and_milvus.md">Recherche vidéo avancée : Tirer parti de Twelve Labs et de Milvus pour la recherche sémantique</a></td><td>Recherche sémantique</td><td>Milvus, Twelve Labs</td></tr>
<tr><td><a href="/docs/fr/kafka-connect-milvus.md">Connecter Kafka avec Milvus</a></td><td>Sources de données</td><td>Milvus, Kafka</td></tr>
<tr><td><a href="/docs/fr/kotaemon_with_milvus.md">Kotaemon RAG avec Milvus</a></td><td>RAG</td><td>Milvus, Kotaemon</td></tr>
<tr><td><a href="/docs/fr/apify_milvus_rag.md">Génération améliorée pour la recherche : Exploration de sites web avec Apify et enregistrement des données dans Milvus pour la réponse aux questions</a></td><td>Sources de données</td><td>Milvus, Apify</td></tr>
<tr><td><a href="/docs/fr/build_rag_on_arm.md">Construire RAG sur l'architecture Arm</a></td><td>RAG</td><td>Milvus, Arm</td></tr>
<tr><td><a href="/docs/fr/build_RAG_with_milvus_and_fireworks.md">Construire RAG avec Milvus et Fireworks AI</a></td><td>LLMs</td><td>Milvus, Fireworks AI</td></tr>
<tr><td><a href="/docs/fr/build_RAG_with_milvus_and_lepton.md">Construire un GCR avec Milvus et Lepton AI</a></td><td>LLMs</td><td>Milvus, Lepton AI</td></tr>
<tr><td><a href="/docs/fr/build_RAG_with_milvus_and_siliconflow.md">Construire un RAG avec Milvus et SiliconFlow</a></td><td>LLMs</td><td>Milvus, SiliconFlow</td></tr>
<tr><td><a href="/docs/fr/rag_with_milvus_and_unstructured.md">Construire un RAG avec Milvus et des sources de données non structurées</a></td><td>non structurées</td><td>Milvus, non structuré</td></tr>
<tr><td><a href="/docs/fr/RAG_with_pii_and_milvus.md">Construire un RAG avec Milvus + PII Masker</a></td><td>Sources de données</td><td>Milvus, PII Masker</td></tr>
<tr><td><a href="/docs/fr/knowledge_table_with_milvus.md">Tableau des connaissances avec Milvus</a></td><td>Ingénierie des connaissances</td><td>Tableau des connaissances, Milvus</td></tr>
<tr><td><a href="/docs/fr/build_RAG_with_milvus_and_cognee.md">Construire un RAG avec Milvus et Cognee</a></td><td>Ingénierie des connaissances</td><td>Milvus, Cognee</td></tr>
<tr><td><a href="/docs/fr/build_RAG_with_milvus_and_gemini.md">Construire un RAG avec Milvus et Gemini</a></td><td>LLMs</td><td>Milvus, Gemini</td></tr>
<tr><td><a href="/docs/fr/build_RAG_with_milvus_and_ollama.md">Construire un RAG avec Milvus et Ollama</a></td><td>LLMs</td><td>Milvus, Ollama</td></tr>
<tr><td><a href="/docs/fr/build_RAG_with_milvus_and_deepseek.md">Construire un RAG avec Milvus et DeepSeek</a></td><td>LLMs</td><td>Milvus, DeepSeek</td></tr>
<tr><td><a href="/docs/fr/build_RAG_with_milvus_and_crawl4ai.md">Construire un RAG avec Milvus et Crawl4AI</a></td><td>Sources de données</td><td>Milvus, Crawl4AI</td></tr>
<tr><td><a href="/docs/fr/build_RAG_with_milvus_and_firecrawl.md">Construire un RAG avec Milvus et Firecrawl</a></td><td>Sources de données</td><td>Milvus, Firecrawl</td></tr>
<tr><td><a href="/docs/fr/integration_with_mindsdb.md">Intégrer Milvus à MindsDB</a></td><td>Ingénierie des connaissances</td><td>Milvus, MindsDB</td></tr>
<tr><td><a href="/docs/fr/build_RAG_with_milvus_and_feast.md">Construire un RAG avec Milvus et Feast</a></td><td>Sources de données</td><td>Milvus, Feast</td></tr>
<tr><td><a href="/docs/fr/build_RAG_with_milvus_and_docling.md">Construire RAG avec Milvus et Docling</a></td><td>Sources de données</td><td>Milvus, Docling</td></tr>
<tr><td><a href="/docs/fr/build_RAG_with_milvus_and_embedAnything.md">Construire RAG avec Milvus et EmbedAnything</a></td><td>Embedding</td><td>Milvus, EmbedAnything</td></tr>
<tr><td><a href="/docs/fr/milvus_and_n8n.md">Démarrer avec Milvus et n8n</a></td><td>Orchestration</td><td>Milvus, n8n</td></tr>
<tr><td><a href="/docs/fr/use_milvus_in_anythingllm.md">Utiliser Milvus dans AnythingLLM</a></td><td>Orchestration</td><td>Milvus, AnythingLLM</td></tr>
<tr><td><a href="/docs/fr/NLWeb_with_milvus.md">Utiliser NLWeb avec Milvus</a></td><td>Sources de données</td><td>Milvus, NLWeb</td></tr>
<tr><td><a href="/docs/fr/langextract_milvus_demo.md">Intégration LangExtract + Milvus</a></td><td>Sources de données</td><td>Milvus, LangExtract</td></tr>
<tr><td><a href="https://colab.research.google.com/drive/1bONndT8MIxJZzzV4QTpQfU-eyWdL1Q1m?usp=sharing">Recherche sémantique avec ZeroEntropy et Milvus</a></td><td>Recherche sémantique</td><td>Milvus, ZeroEntropy</td></tr>
<tr><td><a href="/docs/fr/langchain_milvus_dido.md">Intégration de la fonction d'incorporation de texte de Milvus avec LangChain</a></td><td>Intégration de texte</td><td>Milvus, LangChain</td></tr>
<tr><td>[Construire un agent RAG à double source avec Exa et Milvus]</td><td>Sources de données</td><td>Milvus, Exa</td></tr>
</tbody>
</table>
